# plasm-challenge-extrusion-planer

./: README.md  main.py  pyproject.toml
examples/: plot_helper.py  visualize_flow_analysis.py
examples/advanced/: README.md  custom_hotend.py
examples/basic/: README.md  basic_usage.py
src/extrusion_planner/: __init__.py  adjuster.py  flow_calculator.py  lookahead.py  models.py  planner.py  pressure.py  profiles.py  visualize.py
src/extrusion_planner/models/: __init__.py  hotend.py  material.py  segment.py
tests/: __init__.py  test_adjuster.py  test_flow_calculator.py  test_hotend.py  test_lookahead.py  test_material.py  test_models.py  test_planner.py  test_pressure.py  test_profiles.py  test_segment.py  test_visualize.py
