[project]
name = "extrusion-planner"
version = "0.1.0"
description = "Look-ahead extrusion planning system for 3D printing with dynamic feed rate adjustment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=7.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N"]
ignore = []
